0.0.26
Made Regex search optional and remembered.
Replace unprintable characters in file with "". ( allows opening some files like .csv ).
Scan and convert encoding to UTF8 now MUCH better.
Fixed infinite loop bug in regex search when no match found.

0.0.25
fixed multibyte character find/replace bug.
Search 'wrap' and 'replace all' settings saved on exit.
Search in all files setting saved on exit.
Added Search in all files.

0.0.24
Search/Replace now uses regex.
Insensitive search now remembered on exit.

0.0.23
Fixed bug when GtkSu not installed.
Set document 'dirty' after spellcheck.

0.0.22
Added check for installed manpageeditor, if succeeds menu item added in file menu.
Code clean.
Undo bug fix.
Added Manpage Editor Icon for menuitem.
Added 'Always Show In Popup Men' to external tools ( no selection needed ).
Redone some installed tools and example tools.

0.0.21
Added 'Split View' to tab menu, click once to split, again to un-split.
'Live Search' is now always case insensitive.
Removed 'dirty' flag from buffer when first opening as hexdump.
Added configure and associated files to archive so no longer needs auto-tools.
Updated 'INSTALL' file for Debian/fedora users.
Added drop down for syntax highlighting.
Added 'New Editor' to file menu.
Added 'New Admin Editor' to file menu.
Updated help file.
Fixed 'close tab' bug'
Code clean.
Now allows pipes in external tool command.

0.0.20
Added (optional) support for Aspell.
Added 'Check Spelling' to popup menu when word selected.
Added 'Spell Check Document' to document tab menu.
'Cancel' while spell checking document now cancels entire action.
Updated 'Help'.

0.0.19
Added 'Live Search' to toolbar, 'Enter' -> find next,'Shift' -> find prev.
Added show/hide entry boxes on toolbar to prefs.

0.0.18
Added command line switch (-m) to override the single instance pref ( used for running an extra version via the tools menu etc ).
Added drag 'n' drop to insert text file into text when dropped on text part of window;